openshift/UAT1/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: abacas-transaction-service
  labels:
    app: abacas-transaction-service
    app.kubernetes.io/component: abacas-transaction-service
    app.kubernetes.io/instance: abacas-transaction-service
    app.kubernetes.io/name: abacas-transaction-service
    app.kubernetes.io/part-of: ABACAS
    app.openshift.io/runtime: java
    app.openshift.io/runtime-version: openjdk-11-el7
spec:
  host: abacas.apps.ocpuat.dti.co.id
  path: /transaction
  to:
    kind: Service
    name: abacas-transaction-service
    weight: 100
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
    certificate: |-
      -----BEGIN CERTIFICATE-----
      MIIHKDCCBhCgAwIBAgITJQAACCt75FswCwmr2QACAAAIKzANBgkqhkiG9w0BAQsF
[...]
      pTcedoAOEStQg0Y4
      -----END CERTIFICATE-----
    key: |-
      -----BEGIN RSA PRIVATE KEY-----
      MIIJKQIBAAKCAgEA3CUDyMb9yPrByirGO/dcZKOePwL/tL2b2eoYyOVH2kAEmdlJ
[...]
      -----END RSA PRIVATE KEY-----
    caCertificate: |-
      -----BEGIN CERTIFICATE-----
      MIIEBDCCAuygAwIBAgIQWRrc69n8yZJJJ9J7HwCfqDANBgkqhkiG9w0BAQsFADB0
[...]
      WGx+/rblnXfETbt80r1VZCvg4JKeHstY
      -----END CERTIFICATE-----
    insecureEdgeTerminationPolicy: Allow
  wildcardPolicy: None
